Bug 60282 - PRINTING: Lines around fontwork not smooth
Summary: PRINTING: Lines around fontwork not smooth
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: graphics stack (show other bugs)
Version:
(earliest affected)
4.0.0.3 release
Hardware: All Windows (All)
: high normal
Assignee: Not Assigned
URL:
Whiteboard: BSA target:4.2.0 target:4.1.1 target:...
Keywords: regression
: 60081 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-02-04 15:10 UTC by Scott
Modified: 2014-01-21 15:00 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
See all of the little extraneous lines on the Fontwork. (42.01 KB, application/pdf)
2013-02-04 15:10 UTC, Scott
Details
Font (45.66 KB, application/x-font-ttf)
2013-02-08 05:03 UTC, Scott
Details
Picture of the printimng (17.50 KB, image/png)
2013-02-27 17:20 UTC, Florian Reisinger
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Scott 2013-02-04 15:10:25 UTC
Created attachment 74178 [details]
See all of the little extraneous lines on the Fontwork.

See attachment and you'll see that the lines that go around a fontwork are not smooth.  There are little lines that are perpendicular to the font work all around the object.  you see this when the object prints, not on screen. I have tried multiple printers. I am running LO 4.0 RC2 which I setup using the LO Server Parallel installer on Windows 7 32bit.
Operating System: Windows 7
Version: 4.0.0.3 rc
Last worked in: 3.6.5.2 release
Comment 1 Joel Madero 2013-02-04 15:54:20 UTC
I can't reproduce on Linux so if the problem exists it is a Windows only bug.
Comment 2 Scott 2013-02-08 04:35:06 UTC
OK. The issue is displayed both printing and in the document itself.  Font works look like they have whiskers now.  Just zoom in and you will see the whiskers.
Comment 3 Scott 2013-02-08 04:46:34 UTC
Joel, Can you try different fonts?  Just inserting the default doesn't display the issue.  Try fonts with more rounded edges.  Scott
Comment 4 Scott 2013-02-08 04:49:26 UTC
Try Comic Sans
Comment 5 Scott 2013-02-08 05:03:27 UTC
Created attachment 74402 [details]
Font
Comment 6 Scott 2013-02-21 16:27:52 UTC
Still exists in 4.0.1.1 RC1
Comment 7 Scott 2013-02-26 20:58:19 UTC
Joel, can you try the font URW Chancery L?  you will see the small line on the curves of the font if you zoom into like 400%.
Comment 8 Joel Madero 2013-02-26 21:15:15 UTC
@Scott - two points

1. Version is not touched, we use comment to say the issue still exists on some newer version, version field is supposed to be oldest version that we confirm the problem.

2. This is not a major bug - major bugs are data loss bugs and crashes or the like. For pointers see:

https://wiki.documentfoundation.org/images/0/06/Prioritizing_Bugs_Flowchart.jpg

I'll check the bug again with the given font :)
Comment 9 Scott 2013-02-26 21:19:31 UTC
It is major for me if a lot of what I do is fontwork based.
Comment 10 Joel Madero 2013-02-26 21:20:09 UTC
unfortunately that's not the guideline we use - just because one user is affected more doesn't mean the framework of our triaging should change
Comment 11 Scott 2013-02-26 21:24:27 UTC
OK. But I do appreciate your time looking into it, thx.
Comment 12 Florian Reisinger 2013-02-27 17:20:49 UTC
Created attachment 75644 [details]
Picture of the printimng

Yes I can see something, but it can be a feature as well

Version 4.1.0.0.alpha0+ (Build ID: 74f74aa5470fe631c7827897742c0ccbddcf6ad)
TinderBox: Win-x86@6, Branch:master, Time: 2013-02-23_23:21:01 @ Win 7 x64
Comment 13 Scott 2013-02-27 18:07:49 UTC
Thank you all so much for your time on this.  I found one other thing I don't know if it's related or if I should create a new thicket.  When saving an odt with a fontwork the save works fine and the thumbnail for the document shows the tiny preview fine but when you open the doc the Fontwork is gone. also does "Version 4.1.0.0.alpha0+ (Build ID: 74f74aa5470fe631c7827897742c0ccbddcf6ad)
TinderBox: Win-x86@6, Branch:master, Time: 2013-02-23_23:21:01 @ Win 7 x64" mean that's the target for the fix?
Comment 14 Scott 2013-02-27 18:09:13 UTC
Oh also Florian said "but it can be a feature as well". Really?
Comment 15 Joel Madero 2013-02-27 18:11:07 UTC
I don't think it's a feature as it's a regression ;) we're trying to get LibreOffice 3.6 tested with W7 - still no clue why I haven't seen the issue.

Please do open another bug for the other issue :-D 

When you open it please provide easy to reproduce steps (even if it seems obvious) just because it makes triaging so much faster.
Comment 16 tomislav.preksavec 2013-07-17 14:26:03 UTC
I'm having exactly the same problem using BauhausHvBt font & LO 4.0.4.2 (and/or any previous version) on W7. It doesn't matter which printer or driver I use (tried on different HP and Canon models), but I've found a workaround for this problem: if I use 'Export Directly as PDF' then the resulting PDF file doesn't have this problem and I can print the document correctly. Of course, fixing this bug would be apriciated, I'm piling PDF files on my hard drive ;)
Comment 17 Michael Stahl 2013-07-27 22:34:01 UTC
it was already fixed on master by commit 744244997da79ca95278249eeadf716730fffd82

apparently it was introduced by some merge from AOO, as the fix
is also from AOO and AOO 3.4.0 has the same bug; will try to
get the fix into 4.0/4.1 branches.
Comment 18 Commit Notification 2013-07-27 22:46:40 UTC
Armin Le Grand committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=dcb4053a43fc71841abcb25ebde90555c36f2bfe&h=libreoffice-4-1

fdo#60282 fdo#66745 i#122509 Corrected typo in basegfx


It will be available in LibreOffice 4.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 19 Commit Notification 2013-07-28 13:17:53 UTC
Armin Le Grand committed a patch related to this issue.
It has been pushed to "libreoffice-4-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3ccdc5aa26cdde6e7780005d010c263c73aa638f&h=libreoffice-4-0

fdo#60282 fdo#66745 i#122509 Corrected typo in basegfx


It will be available in LibreOffice 4.0.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 20 Michael Stahl 2014-01-21 15:00:58 UTC
*** Bug 60081 has been marked as a duplicate of this bug. ***