fdo#60282 fdo#66745 i#122509 Corrected typo in basegfx

(cherry picked from commit cdf48cfdbdb5348b259f4632790ffd178fcad1f7)

(cherry picked from commit 744244997da79ca95278249eeadf716730fffd82)

Signed-off-by: Michael Stahl <mstahl@redhat.com>

Change-Id: Iaa62acc4901c3edd31d0af7c642327dddf07f562
Reviewed-on: https://gerrit.libreoffice.org/5144
Reviewed-by: Fridrich Strba <fridrich@documentfoundation.org>
Tested-by: Fridrich Strba <fridrich@documentfoundation.org>